Updated last lecture sources and tests